--- a/package.json
+++ b/package.json
@@ -17,15 +17,35 @@
   },
   "homepage": "https://github.com/Ladramhaiola/ipzLab2#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "babel-core": "^6.26.0",
     "connect": "^3.6.6",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-myth": "^1.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^3.0.0",
     "gulp-stylus": "^2.7.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5"
+  },
+  "dependencies": {
+    "babel": "^6.23.0",
+    "gulp-babel-minify": "^0.3.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "tiny-lr": "^1.1.1"
   }
 }
