--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "gulp-babel-minify": "^0.3.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
-    "tiny-lr": "^1.1.1"
+    "gulp-webserver": "^0.9.1",
+    "tiny-lr": "^1.1.1",
+    "webserver": "^3.1.16"
   }
 }
