--- a/package.json
+++ b/package.json
@@ -44,10 +44,17 @@
   "dependencies": {
     "babel": "^6.23.0",
     "gulp-babel-minify": "^0.3.0",
+    "gulp-debug": "^3.2.0",
+    "gulp-if": "^2.0.2",
+    "gulp-ignore": "^2.0.2",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
+    "gulp-newer": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
+    "stylus": "^0.54.5",
     "tiny-lr": "^1.1.1",
+    "vinyl": "^2.1.0",
     "webserver": "^3.1.16"
   }
 }
